--- a/gh-pages/styles/style.css
+++ b/gh-pages/styles/style.css
@@ -49,16 +49,35 @@ main {
     padding: 2rem;
 }
 
-h1 {
+main h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
 }
 
 footer {
+    align-items: center;
+    bottom: 0;
     background-color: #333;
     color: #fff;
-    padding: 1rem;
-    text-align: center;
+    width: 100%;
+}
+
+footer .content {
+    padding: 30px;
+    display: flex;
+}
+
+footer .text {
+    flex: 1;
+}
+
+footer .socials {
+    display: flex;
+    align-items: center;
+}
+
+footer .socials>* {
+    margin: 0px 4px;
 }
 
 
