--- a/gh-pages/styles/style.css
+++ b/gh-pages/styles/style.css
@@ -6,9 +6,6 @@
     box-sizing: border-box;
 }
 
-
-/* Global styles */
-
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
@@ -55,16 +52,17 @@ main h1 {
 }
 
 footer {
-    align-items: center;
+    width: 100%;
     bottom: 0;
+    left: 0;
+    height: 5rem;
+    align-items: center;
     background-color: #333;
     color: #fff;
-    width: 100%;
-}
-
-footer .content {
-    padding: 30px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 2rem;
 }
 
 footer .text {
@@ -72,39 +70,10 @@ footer .text {
 }
 
 footer .socials {
-    display: flex;
-    align-items: center;
+    display: none;
+    vertical-align: middle;
 }
 
 footer .socials>* {
-    margin: 0px 4px;
-}
-
-
-/* Styles for cookie warning */
-
-#cookie-warning {
-    position: fixed;
-    max-width: 34rem;
-    bottom: 1rem;
-    right: 1rem;
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-#cookie-warning a {
-    color: #fff;
-}
-
-#cookie-accept {
-    background-color: #fff;
-    color: #333;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 0.5rem;
+    margin: 0px 0.1rem;
 }
